changes from review